--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,3 @@
 project:
-    resource: "@ProjectBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+    type: rest
+    resource: "@ProjectBundle/Resources/config/routing.yml"
