--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,14 +72,16 @@ fos_rest:
     view:
         formats:
             json: true
+            html: false
             xml: false
             rss: false
         templating_formats:
             html: false
-        force_redirects:
-            html: true
+#        force_redirects:
+#            html: true
         failed_validation: HTTP_BAD_REQUEST
         # view_response_listener: force
+        empty_content: 204
     disable_csrf_role: ROLE_API
     # view_handler: 
 
