--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+    project.form.type.project:
+        class: ProjectBundle\Form\Type\ProjectType
+        tags:
+            - { name: form.type }
