--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,8 @@ swiftmailer:
     spool:     { type: memory }
 
 fos_rest:
+    routing_loader:
+        default_format: json
     view:
         formats:
             json: true
