--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,7 +18,7 @@ framework:
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
+    validation: { enable_annotations: true }
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
@@ -70,17 +70,17 @@ swiftmailer:
 
 fos_rest:
     routing_loader:
-        default_format: json
+        default_format: null
     view:
         formats:
             json: true
-            html: false
+            html: true
             xml: false
             rss: false
         templating_formats:
-            html: false
-#        force_redirects:
-#            html: true
+            html: true
+        force_redirects:
+            html: true
         failed_validation: HTTP_BAD_REQUEST
         # view_response_listener: force
         empty_content: 204
