--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 app_homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
+
+app_projects:
+    path: /projects
+    defaults: { _controller: AppBundle:Project:index }
