--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,3 +93,9 @@ sensio_framework_extra:
         annotations: true
 
 nelmio_api_doc: ~
+
+assetic:
+    debug: '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
