--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "angular-bootstrap": "^1.3.3"
+  },
+  "devDependencies": {
+    "angular-route": "^1.5.6"
   }
 }
